--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
     <title>Auliya Daffa Isy</title>
@@ -34,10 +36,13 @@
             </div>
         </nav>
 
-    <!-- home -->
+    <!-- home-->
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
+                <div class="text-1"> Hi!I'm </div>
+                <div class="text-2"> Auliya Daffa Isy</div>
+                <div class="text-3">  And I'm a <span class="typing"></span></div>
             </div>
         </div>
     </section>
@@ -82,7 +87,7 @@
             <div class="box">
                 <i class="fas fa-microphone"></i>
                     <div class="text"><a href="https://drive.google.com/drive/u/0/folders/1_vC4WUiXcVSza_XS5Mf-wBlQY1hDjPaf">Master Of Ceremony</a></div>
-                        <p> am important skill to have is communication, and to have that skill we can learn by being a MC</p>
+                        <p> An important skill to have is communication, and to have that skill we can learn by being a MC</p>
             </div>
         </div>
         </section>
