new new portofolio

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                          <img src="images/aboutoya.jpg" alt="">
                      </div>
                     <div class="column right">
-                         <div class="text"data-aos="fade-down" data-aos-duration="2000"> Hello! <span class="typing-2"></span></div>
+                         <div class="text"data-aos="fade-down" data-aos-duration="2000"> Hello <span class="typing-2"></span></div>
                             <p> My name is Auliya Daffa Isy, but you can call me oya. I was born on Depok, 15 December 2000. I'm a student of Informatics in University Diponegoro. I'm a hardworker and i can work under pressure. I have moto in my life "Be Better than you were yesterday" </p>
                             <a href="https://drive.google.com/drive/u/0/folders/1-B6FtAUOXVSj1w-w47s7QFRNhoMqVOfo">Download CV</a>
                     </div>
