--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="home-content">
                 <div class="text-1"> Hi!I'm </div>
                 <div class="text-2"> Auliya Daffa Isy</div>
-                <div class="text-3">  And I'm a <span class="typing"></span></div>
+                <div class="text-3">  And I'm an <span class="typing"></span></div>
             </div>
         </div>
     </section>
