--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         </section>
 
-    <!-- skills-->
+    <!-- skills
     <section class="skills" id="skills">
         <div class="max-width">
             <h2 class="title"data-aos="fade-down" data-aos-duration="1500">MY SKILLS  </h2>
@@ -133,7 +133,7 @@
                         </div>
                 </div>
         </div>
-    </section>
+    </section> -->
     <!-- Contact -->
     <section class="contact" id="contact">
         <div class="max-width">
