--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="home-content">
                 <div class="text-1"> Hi !I'm </div>
                 <div class="text-2"> Auliya Daffa Isy</div>
-                <div class="text-3">  And I'm an <span class="typing"></span></div>
+                <div class="text-3">  And I'm a <span class="typing"></span></div>
             </div>
         </div>
     </section>
@@ -57,7 +57,10 @@
                      </div>
                     <div class="column right">
                          <div class="text"data-aos="fade-down" data-aos-duration="2000"> Hello <span class="typing-2"></span></div>
-                            <p> My name is Auliya Daffa Isy, but you can call me oya. I was born on Depok, 15 December 2000. I'm a student of Informatics in University Diponegoro. I'm a hardworker and i can work under pressure. I have moto in my life "Be Better than you were yesterday" </p>
+                            <p> A fresh graduate from Informatics, Diponegoro University. A purpose-driven and fast-learner individual with strong initiatives to learn new skills to deliver an impactful contribution with commitment and determination. Experienced in managing strategic partnerships, business development, digital product, and project management. Enjoys relationship building and is open to opportunities to make impacts on her community. Ready to enhance my working capabilities by combining my experiences and skills in a dynamic workplace.
+                                Feel free to reach me out!
+                                📧 auliyadaffa3@gmail.com
+                                 </p>
                             <a href="https://drive.google.com/drive/u/0/folders/1-B6FtAUOXVSj1w-w47s7QFRNhoMqVOfo">Download CV</a>
                     </div>
                 </div>
