--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                      </div>
                     <div class="column right">
                          <div class="text"data-aos="fade-down" data-aos-duration="2000"> Hello <span class="typing-2"></span></div>
-                            <p> A fresh graduate from Informatics, Diponegoro University. A purpose-driven and fast-learner individual with strong initiatives to learn new skills to deliver an impactful contribution with commitment and determination. Experienced in managing strategic partnerships, business development, digital product, and project management. Enjoys relationship building and is open to opportunities to make impacts on her community. Ready to enhance my working capabilities by combining my experiences and skills in a dynamic workplace.
+                            <p> Im Auliya Daffa Isy a fresh graduate from Informatics, Diponegoro University. A purpose-driven and fast-learner individual with strong initiatives to learn new skills to deliver an impactful contribution with commitment and determination. Experienced in managing strategic partnerships, business development, digital product, and project management. Enjoys relationship building and is open to opportunities to make impacts on her community. Ready to enhance my working capabilities by combining my experiences and skills in a dynamic workplace.
                                 Feel free to reach me out!
                                 📧 auliyadaffa3@gmail.com
                                  </p>
