--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 Feel free to reach me out!
                                 📧 auliyadaffa3@gmail.com
                                  </p>
-                            <a href="https://drive.google.com/drive/u/0/folders/1-B6FtAUOXVSj1w-w47s7QFRNhoMqVOfo">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1SUOmnn3AejAdrjIOmUXsPeP2m7D23Cqo/view?usp=share_link">Download CV</a>
                     </div>
                 </div>
         </div>
@@ -75,22 +75,22 @@
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
                 <div class="box">
                      <i class="fas fa-paint-brush"></i>
-                            <div class="text"><a href="http://www.themodernweb.rf.gd/home.php"> Web Design and Development</a></div>
-                                <p> Project implementations web design and development "The Modern Web" </p>
+                            <div class="text"><a href="https://drive.google.com/file/d/1sn-_k9ur7STlzAtMX6wwXUglVmWm0bxf/view?usp=share_link"> Web Design and Development</a></div>
+                                <p> Project implementations web design and development </p>
                             </div>
             </div>
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
              <div class="box">
                 <i class="fas fa-chart-line"></i>
-                    <div class="text"><a href="https://instagram.com/flamboyanfrozen?igshid=tt0nu4vu7hkv">Business</a></div>
-                         <p>Increasing my knowledge of enterpreneurship through an online shop as becoming an entrepreneur </p>
+                    <div class="text"><a href="https://drive.google.com/file/d/1MFAf8k6gFJtQo6F6D535HDCUZl4XuufD/view?usp=share_link">Talent and Speakers</a></div>
+                         <p>Increasing my knowledge of career and develop the talent that I have by being a speaker and talent </p>
              </div>
             </div>
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
              <div class="box">
                 <i class="fas fa-microphone"></i>
-                    <div class="text"><a href="https://drive.google.com/drive/u/0/folders/1_vC4WUiXcVSza_XS5Mf-wBlQY1hDjPaf">Master Of Ceremony</a></div>
-                        <p> An important skill to have is communication, and to have that skill we can learn by being a MC</p>
+                    <div class="text"><a href="https://drive.google.com/file/d/1fO9Ko231HjU0tSKVnnoqdORMu4npMroX/view?usp=share_link"> Public Speaking</a></div>
+                        <p> An important skill to have is communication, and to have that skill we can learn by being public speaker like being MC Moderator and ETC</p>
             </div>
         </div>
         </section>
