--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
                 <div class="box">
                      <i class="fas fa-paint-brush"></i>
-                            <div class="text"><a href="https://drive.google.com/file/d/1sn-_k9ur7STlzAtMX6wwXUglVmWm0bxf/view?usp=share_link"> Web Design and Development</a></div>
+                            <div class="text"><a href="https://drive.google.com/file/d/1sn-_k9ur7STlzAtMX6wwXUglVmWm0bxf/view?usp=share_link"> Web Development and Project Management</a></div>
                                 <p> Project implementations web design and development </p>
                             </div>
             </div>
