--- a/index.html
+++ b/index.html
@@ -75,15 +75,8 @@
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
                 <div class="box">
                      <i class="fas fa-paint-brush"></i>
-                            <div class="text"><a href="https://drive.google.com/file/d/1sn-_k9ur7STlzAtMX6wwXUglVmWm0bxf/view?usp=share_link"> Web Design implementations</a></div>
+                            <div class="text"><a href="https://drive.google.com/file/d/1sn-_k9ur7STlzAtMX6wwXUglVmWm0bxf/view?usp=share_link"> Web Development & Project Management </a></div>
                                 <p> Project implementations web design and development </p>
-                            </div>
-            </div>
-            <div class="card"data-aos="fade-down" data-aos-duration="1500">
-                <div class="box">
-                     <i class="fas fa-paint-brush"></i>
-                            <div class="text"><a href="https://drive.google.com/file/d/1sn-_k9ur7STlzAtMX6wwXUglVmWm0bxf/view?usp=share_link"> Project Management</a></div>
-                                <p> Develop comprehensive project plans, outlining tasks, timelines, resource requirements, and milestones.</p>
                             </div>
             </div>
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
