--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
                 <div class="box">
                      <i class="fas fa-paint-brush"></i>
-                            <div class="text"><a href="https://drive.google.com/file/d/1sn-_k9ur7STlzAtMX6wwXUglVmWm0bxf/view?usp=share_link"> Web Development & Project Management </a></div>
+                            <div class="text"><a href="https://drive.google.com/file/d/1HJDMwEHCUcTIQIUPldHJwBH1Ugh6i3W8/view?usp=sharing"> Web Development & Project Management </a></div>
                                 <p> Project implementations web design and development </p>
                             </div>
             </div>
@@ -89,7 +89,7 @@
             <div class="card"data-aos="fade-down" data-aos-duration="1500">
              <div class="box">
                 <i class="fas fa-microphone"></i>
-                    <div class="text"><a href="https://drive.google.com/file/d/1fO9Ko231HjU0tSKVnnoqdORMu4npMroX/view?usp=share_link"> Public Speaking</a></div>
+                    <div class="text"><a href="https://drive.google.com/file/d/1fDLraTTEe5AIYxxXSUIwbq5zqQKrLG1M/view?usp=sharing"> Public Speaking</a></div>
                         <p> An important skill to have is communication, and to have that skill we can learn by being public speaker like being MC Moderator and ETC</p>
             </div>
         </div>
